logistics-terraform/FusionIQ-infra/terraform-vpc/vpc.tf
resource "aws_vpc" "fusioniq_vpc" {
  cidr_block           = var.cidr_block
  enable_dns_hostnames = var.enable_dns_hostnames
  
  tags = merge(
    var.tags_common,
    {
      Name = local.resource_name
    }
  )
}
